--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "dependencies": {
     "core-js": "^3.16.4",
-    "grimoire-kolmafia": "0.3.17",
-    "kolmafia": "^5.27321.0",
+    "grimoire-kolmafia": "^0.3.26",
+    "kolmafia": "^5.27920.0",
     "libram": "^0.8.31"
   },
   "author": "Kasekopf",
